--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">SignYourApk</string>
+    <string name="sign_you_apk">Sign you APK</string>
+    <string name="start">Start...</string>
+    <string name="apk_signed">APK signed !</string>
+    <string name="please_select_an_apk">please select an APK</string>
+    <string name="failed">failed!</string>
 </resources>
